// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен нарисовать хлебные крошки, даже если нет .vehicle_info.tech_param 1`] = `
Array [
  <Link
    className="CardBreadcrumbs__itemText"
    color="gray"
    url="link/index/?"
  >
    Продажа автомобилей
  </Link>,
  <Link
    className="CardBreadcrumbs__itemText"
    color="gray"
    url="link/listing/?section=used"
  >
    С пробегом
  </Link>,
  <Link
    className="CardBreadcrumbs__itemText"
    color="gray"
    url="link/listing/?section=used&mark=FORD"
  >
    Ford
  </Link>,
  <Link
    className="CardBreadcrumbs__itemText"
    color="gray"
    url="link/listing/?mark=FORD&section=used&model=ECOSPORT"
  >
    EcoSport
  </Link>,
  <Link
    className="CardBreadcrumbs__itemText"
    color="gray"
    url="link/listing/?mark=FORD&model=ECOSPORT&section=used&super_gen=20104320"
  >
    I
  </Link>,
  <Link
    className="CardBreadcrumbs__itemText"
    color="gray"
    url="link/listing/?mark=FORD&model=ECOSPORT&super_gen=20104320&section=used&configuration_id=20104322"
  >
    Внедорожник 5 дв.
  </Link>,
]
`;

exports[`Должен отрендерить хлебные крошки 1`] = `
<div
  className="CardBreadcrumbs"
>
  <div
    className="CardBreadcrumbs__item"
  >
    <div
      className="CardBreadcrumbs__itemText"
    >
      <Link
        className="CardBreadcrumbs__itemText"
        color="gray"
        url="link/index/?"
      >
        Продажа автомобилей
      </Link>
      <IconSvg
        className="CardBreadcrumbs__arrow"
        id="svgID"
        key="arrow"
        size="24"
      />
    </div>
  </div>
  <div
    className="CardBreadcrumbs__item"
    key="breadcrumb-SECTION_LEVEL"
  >
    <Link
      className="CardBreadcrumbs__itemText"
      color="gray"
      url="link/listing/?section=used"
    >
      С пробегом
    </Link>
  </div>
  <IconSvg
    className="CardBreadcrumbs__arrow"
    id="svgID"
    key="arrow"
    size="24"
  />
  <div
    className="CardBreadcrumbs__item"
    key="breadcrumb-MARK_LEVEL"
  >
    <Link
      className="CardBreadcrumbs__itemText"
      color="gray"
      url="link/listing/?section=used&mark=FORD"
    >
      Ford
    </Link>
  </div>
  <IconSvg
    className="CardBreadcrumbs__arrow"
    id="svgID"
    key="arrow"
    size="24"
  />
  <div
    className="CardBreadcrumbs__item"
    key="breadcrumb-MODEL_LEVEL"
  >
    <Link
      className="CardBreadcrumbs__itemText"
      color="gray"
      url="link/listing/?mark=FORD&section=used&model=ECOSPORT"
    >
      EcoSport
    </Link>
  </div>
  <IconSvg
    className="CardBreadcrumbs__arrow"
    id="svgID"
    key="arrow"
    size="24"
  />
  <div
    className="CardBreadcrumbs__item"
    key="breadcrumb-GENERATION_LEVEL"
  >
    <Link
      className="CardBreadcrumbs__itemText"
      color="gray"
      url="link/listing/?mark=FORD&model=ECOSPORT&section=used&super_gen=20104320"
    >
      I
    </Link>
  </div>
  <IconSvg
    className="CardBreadcrumbs__arrow"
    id="svgID"
    key="arrow"
    size="24"
  />
  <div
    className="CardBreadcrumbs__item"
    key="breadcrumb-CONFIGURATION_LEVEL"
  >
    <Link
      className="CardBreadcrumbs__itemText"
      color="gray"
      url="link/listing/?mark=FORD&model=ECOSPORT&super_gen=20104320&section=used&configuration_id=20104322"
    >
      Внедорожник 5 дв.
    </Link>
  </div>
  <IconSvg
    className="CardBreadcrumbs__arrow"
    id="svgID"
    key="arrow"
    size="24"
  />
  <div
    className="CardBreadcrumbs__item"
    key="breadcrumb-TECH_PARAM_LEVEL"
  >
    <Link
      className="CardBreadcrumbs__itemText"
      color="gray"
      url="link/listing/?mark=FORD&model=ECOSPORT&configuration_id=20104322&super_gen=20104320&section=used&tech_param_id=20104325"
    >
      1.6 AMT (122 л.с.)
    </Link>
  </div>
  <div
    className="CardBreadcrumbs__item"
  >
    <div
      className="CardBreadcrumbs__itemText"
    >
       в Москве
    </div>
  </div>
</div>
`;
